
[float]
===== Deprecated
- Deprecation {pull}2526[#2526]

[float]
===== Added
- Feature {pull}2526[#2526]

[float]
===== Changed
- Change {pull}2526[#2526]

[float]
===== Fixed
- Fix {pull}2526[#2526]

[float]
[[unreleased]]
==== Unreleased
////

[[release-notes-4.x]]
=== Ruby Agent version 4.x

[float]
===== Fixed

- Fixed span context fields for DynamoDB instrumentation {pull}1178[#1178]

[[release-notes-4.4.0]]
==== 4.4.0

[float]
===== Added
- Optional span to be ended instead of current span {pull}1039[#1039]
- Config option `log_ecs_formatting` {pull}1053[#1053]

[float]
===== Fixed
- Fixed detecting Linux on Alpine for CPU/MEM metrics {pull}1057[#1057]

[[release-notes-4.3.0]]
==== 4.3.0

[float]
===== Added

- Add JVM memory metrics {pull}1040[#1040]

[[release-notes-4.2.0]]
==== 4.2.0

[float]
===== Added

- Add support for AWS Storage Table/CosmosDB {pull}999[#999]

[float]
===== Fixed

- Align HTTP span types/subtypes with spec {pull}1014[#1014]
- Passing a full URL as a path to `Net::HTTP` {pull}1029[#1029]
- Fix growing number of open file descriptors {pull}1033[#1033]

[[release-notes-4.1.0]]
==== 4.1.0

[float]
===== Added

- Azure App Services instance metadata {pull}1007[#1007]

[float]
===== Changed

- `hostname` is now reported split by `configured_hostname` and `detected_hostname` {pull}1009[#1009]

[float]
===== Fixed
- `service_node_name` is now correctly reported as `service.node.configured_name` {pull}1009[#1009]
- Fix JSON parsing when using yajl-ruby {pull}1012[#1012]
- Fix SpanHelpers when methods take blocks {pull}1013[#1013]
- Fix missing `environment` param when fetching from Central Config {pull}1014[#1014]

[[release-notes-4.0.0]]
==== 4.0.0

[float]
===== Upgrading

Be aware that this release changes the agent's general approach to instrumenting third
party libraries.
It now uses `Module#prepend` over alias method chaining.

This doesn't necessarily impact your application but it could if you are using other gems